Upgrade etex to version 2.6. Use $(SHELL) to invoke mkdirchain (reported by Julian Stacey) Invoke configure using `--prefix=...' to placate the jkh

--- a/print/texk/doc/eplain/invoke.texi
+++ b/print/texk/doc/eplain/invoke.texi
@@ -71,13 +71,11 @@ together, with comments removed.
 All of these files except @file{xeplain.tex} can be input individually,
 if all you want are the definitions in that file.
 
-Also, since the bibliography macros are fairly extensive, you might to
-not load them, while loading the rest of Eplain, to conserve memory in
-@TeX{}.  Therefore, you can control whether or not @file{eplain.tex}
-defines the bibliography-related stuff when you run @TeX{}: if the
+Also, since the bibliography macros are fairly extensive, you might not
+want to load them, to conserve @TeX{}'s memory.  Therefore, if the
 control sequence @code{\nobibtex}
 @findex nobibtex
-is defined, then the definitions aren't made.  You must set
+is defined, then the bibliography definitions are skipped.  You must set
 @code{\nobibtex} before @file{eplain.tex} is read, naturally.  For
 example, you could start your input file like this:
 
