--- a/print/texk/doc/eplain/progdef.texi
+++ b/print/texk/doc/eplain/progdef.texi
@@ -279,13 +279,13 @@ end of the first for the end of the second.
 @section Converting to characters
 
 @cindex characters, converting to
-Eplain defines  @code{\xrlabel}.
+Eplain defines  @code{\xrlabel}
 @findex xrlabel
 to produce control sequence names for cross-reference labels, et al.
 This macro expands to its argument with an @samp{_} appended.  (It does
 this because the usual use of @code{\xrlabel} is to generate a control
-sequence name, and conflicts between control sequence names would lead
-to obscure bugs.)
+sequence name, and we naturally want to avoid conflicts between control
+sequence names.)
 
 Because @code{\xrlabel} is fully expandable, to make a control
 sequence name out of the result you need only do
