--- a/print/texk/texmf/tex/eplain/ChangeLog
+++ b/print/texk/texmf/tex/eplain/ChangeLog
@@ -1,3 +1,25 @@
+Sat Apr 30 05:58:31 1994  Karl Berry  (karl@cs.umb.edu)
+
+        * Version 2.6.
+
+        * xeplain.tex (toc commands): Rewrite to allow general toc's.
+
+        * xeplain.tex: Include indexing commands.
+
+Sun Apr 24 14:59:59 1994  Kathy Hargreaves  (karl@cs.umb.edu)
+
+        * xeplain.tex (\eqalinno): put \hfil back in (from plain) front of
+        first \@align, so lhs will be right justified.
+
+Fri Apr 15 17:46:39 1994  Karl Berry  (karl@ra.cs.umb.edu)
+
+        * merge: Split arrow into pre- and post-catcode changes.
+        * xeplain.tex: Read both parts.
+
+Wed Mar 30 14:34:52 1994  Karl Berry  (karl@ra.cs.umb.edu)
+
+	* xeplain.tex: Globally replace \dimen0 with \dimen@, why not.
+
 Wed Mar 30 13:19:59 1994  Karl Berry  (karl@cs.umb.edu)
 
         * Version 2.5.
