--- a/print/texk/texmf/tex/eplain/NEWS
+++ b/print/texk/texmf/tex/eplain/NEWS
@@ -1,5 +1,12 @@
 This file records noteworthy changes.
 
+2.6 (2 May 1994)
+* Indexing support (in conjunction with MakeIndex).
+* Generalization of .toc files for lists of figures/tables, etc.
+* \commdiag and other arrow macros work again.
+* \eqalignno right-justifies the first column in \leftdisplays, as in
+  non-leftdisplays.
+
 2.5 (31 March 1994)
 * Do not ignore first \ref command.
 * Make \verbatim (and the || feature) work again (thanks to Dorai Sitaram).
@@ -43,4 +50,4 @@ This file records noteworthy changes.
   middle of a paragraph.
 * \pathafterhook added to \path in path.sty, so macros can execute
   cleanup actions.
-* The \path command and its friends are documented in the manual.
+* The \path command and friends are documented in the manual.
