--- a/print/texk/texmf/tex/eplain/test/contents.tex
+++ b/print/texk/texmf/tex/eplain/test/contents.tex
@@ -1,10 +1,12 @@
-\ifx\undefined\eplain \input eplain \fi
+\input eplain
+
+\newcount\subsectionno
 
 \def\tocsubsectionentry#1#2#3{\leftline{Subsection #2.~#1\dotfill#3}}
+\let\tocentry = \tocsubsectionentry
 
 \readtocfile
 
-\newcount\subsectionno
 \subsectionno = 13
 
 \writetocentry{chapter}{beginning}
@@ -17,6 +19,8 @@
 \advance\subsectionno by 1
 \writenumberedtocentry{subsection}{Subsection \#15}{\the\subsectionno}
 
+% This doesn't expand \the\subsectionno -- only the first token gets
+% expanded. Its output line starts with \tocentry.
 \writenumberedtocentry{}{A toc entry}{1{\the\subsectionno}}
 
 %\loggingall
